<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.example.bibliotekamobilnapwr.Main" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/title_main"
        android:textSize="22dp"
        android:textColor="@color/blue"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:layout_weight="1"/>
        
        <EditText 
            android:id="@+id/main_title_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/main_title"
            android:layout_weight="5"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/main_author"
            android:layout_weight="1"/>
        
        <EditText 
            android:id="@+id/main_author_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/main_author"
            android:layout_weight="5"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right">
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
	    <Button 
            android:id="@+id/main_search"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:layout_marginRight="25dp"
	        android:layout_marginLeft="25dp"
	        android:padding="5dp"
	        android:gravity="center"
	        android:background="@color/green_transparent"
	        android:text="@string/main_search"/>
	    
	    <Button 
            android:id="@+id/main_reservations"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginRight="25dp"
	        android:layout_marginLeft="25dp"
	        android:padding="5dp"
	        android:gravity="center"
	        android:background="@color/blue_transparent"
	        android:layout_gravity="right"
	        android:text="@string/main_reservations" />

	    <Button
	        android:id="@+id/main_books"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:background="@color/blue_transparent"
	        android:gravity="center"
	        android:padding="5dp"
	        android:text="@string/main_books" />
	    
	    <Button 
	        android:id="@+id/main_account"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:layout_marginRight="25dp"
	        android:layout_marginLeft="25dp"
	        android:padding="5dp"
	        android:gravity="center"
	        android:background="@color/blue_transparent"
	        android:layout_gravity="right"
	        android:text="@string/main_account"/>
	    
	    
	    <Button 
	        android:id="@+id/main_logout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginRight="25dp"
	        android:layout_marginLeft="25dp"
	        android:padding="5dp"
	        android:gravity="center"
	        android:background="@color/red_transparent"
	        android:layout_gravity="right"
	        android:text="@string/main_logout"/>
    </LinearLayout>
</LinearLayout>

