<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/find_books"
            android:textColor="#1E90FF"
            android:textSize="20dp" />

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:background="#b0b0b0"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/book_Title"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1"
            android:background="#b0b0b0"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/book_Author"
            android:textColor="#000"
            android:textSize="18sp" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1"
            android:background="#b0b0b0"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/book_stat"
            android:textColor="#000"
            android:textSize="18sp" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1"
            android:background="#b0b0b0"
            android:gravity="left"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="18sp" />
        
    </TableRow>
    
 	<TableRow 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
         
         <ListView
             android:id="@+id/listaRezKsiazki"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
              >

    	</ListView>
        
    </TableRow>

</TableLayout>

</LinearLayout>