<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
     android:background="@drawable/background"
    tools:context="com.example.bibliotekamobilnapwr.Main" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/login_title"
        android:textSize="22dp"
        android:textColor="@color/black"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:layout_weight="1"/>
        
        <EditText 
            android:id="@+id/login_login_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/login_login"
            android:layout_weight="5"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:layout_weight="1"/>
        
        <EditText 
            android:id="@+id/login_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:layout_weight="5"/>
    </LinearLayout>
	  
     <RelativeLayout
            android:id="@+id/login_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_rounded_green" >

            <ImageView
                android:id="@+id/login_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_alignParentLeft="true"
                android:background="@drawable/login"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/login_icon"
                android:text="@string/main_login"
                android:textSize="23dp" />
        </RelativeLayout>
    
<!-- 	    <Button 
	        android:id="@+id/login_login_btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginRight="25dp"
	        android:layout_marginLeft="25dp"
	        android:padding="5dp"
	        android:gravity="center"
	        android:background="@color/green_transparent"
	        android:text="@string/main_login"/> -->
</LinearLayout>

